[project]
name = "ezemriv-gh-packages-publish-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ezequiel M Rivero", email = "ezequielmrivero@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
