[project]
name = "ezemriv-dummy-lib"
version = "0.1.0"
description = "Test package for GitHub Packages publishing"
readme = "README.md"
authors = [
    { name = "Ezequiel M Rivero", email = "ezequielmrivero@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "gar_tradelab"
url = "https://oauth2accesstoken@REGION-python.pkg.dev/PROJECT/REPO/simple/"
publish-url = "https://oauth2accesstoken@REGION-python.pkg.dev/PROJECT/REPO/"
explicit = true