[project]
name = "ezemriv-dummy-lib"
version = "0.1.4"
description = "Test package for GitHub Packages publishing"
readme = "README.md"
authors = [
    { name = "Ezequiel M Rivero", email = "ezequielmrivero@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
# From https://docs.astral.sh/uv/guides/integration/alternative-indexes/#authenticate-with-a-google-access-token
# set these for install and local publish:
# export ARTIFACT_REGISTRY_TOKEN=$(gcloud auth application-default print-access-token)
# export UV_INDEX_TRADELAB_PYPI_USERNAME=oauth2accesstoken
# export UV_INDEX_TRADELAB_PYPI_PASSWORD="$ARTIFACT_REGISTRY_TOKEN"
name = "tradelab-pypi"
url = "https://europe-southwest1-python.pkg.dev/tradelab023/tradelab-pypi/simple/"
publish-url = "https://europe-southwest1-python.pkg.dev/tradelab023/tradelab-pypi/"
explicit = true
